edited the GSE34151, script

--- a/GSE34151.analysis.rmd
+++ b/GSE34151.analysis.rmd
@@ -125,7 +125,7 @@ paste0(pc, "%") # "33.8%"
 
 ```
 
-## Are any genes are duplicated?
+## Are any genes duplicated?
 ```{r}
 any(duplicated(df2$Gene.symbol))  # TRUE
 symb.uniq <- unique(df2$Gene.symbol) 
